Ensure text on buttons or placeholders are visible.

--- a/css/hub.css
+++ b/css/hub.css
@@ -116,13 +116,16 @@ h3 {
     font-family: 'Fredoka';
 
 }
+.taskinput::placeholder {
+    color: #D9D9D9;
+}
 
 .completebutton {
     background-color: #364958;
     font-family: 'Fredoka', sans-serif;
     padding: 5px;
     border-radius: 500px;
-    color: #D9D9D9;
+    color: #D9D9D9  !important;
     border-color: #364958;
     border: none;
     margin-right: 25px;
@@ -187,6 +190,10 @@ h3 {
     text-wrap: wrap;
     resize: none;
     
+}
+
+.notesinput::placeholder {
+    color: #D9D9D9;
 }
 
 .notesobjectitle {
